--- a/style.css
+++ b/style.css
@@ -37,3 +37,17 @@ body {
     font-size: 70px;
     margin: 0px;
 }
+table {
+    margin: 0 auto;
+    width: 90%;
+    padding: 0px 10px;
+    background-color: white;
+    float: center;
+    font-family: sans-serif;
+    font-size: 30px;
+    text-align: center;
+
+}
+td {
+    height: 70px;
+}
