--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:royalblue;
+    background-color: #DF1E25;
 }
 .logo-header img {
     width: 70px;
@@ -19,19 +19,16 @@ body {
     color: black;
 }
 .main {
-    text-align: center;
-    background-color: red;
+    text-align: center
 }
 .words {
     margin: 0px;
-    background-color: pink;
     text-align: center;
 }
 .words img{
     width: 50%
 }
 .schedule {
-    background-color: lightblue;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     font-size: 70px;
@@ -41,7 +38,6 @@ table {
     margin: 0 auto;
     width: 90%;
     padding: 0px 10px;
-    background-color: white;
     float: center;
     font-family: sans-serif;
     font-size: 30px;
@@ -52,13 +48,14 @@ td {
     height: 70px;
 }
 .home {
-    color: yellow;
+    color: black;
+    font-weight: bold;
 }
 .away {
-    color: green;
+    color: yellow;
 }
 .team {
-    color: brown;
+    color: white;
 }
 footer {
     text-align: center;
