--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: #DF1E25;
+    background-image: url("./images/ice_1.jpeg");
 }
 .logo-header img {
-    width: 70px;
+    width: 88px;
     height: 50px;
 }
 .logo-header{
@@ -11,6 +11,8 @@ body {
 .nav {
     float: right;
     padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
     
 
 }
@@ -42,17 +44,19 @@ table {
     font-family: sans-serif;
     font-size: 30px;
     text-align: center;
+    background-color: #DF1E25;
 
 }
 td {
     height: 70px;
 }
 .home {
-    color: black;
+    color: yellow;
     font-weight: bold;
 }
 .away {
-    color: yellow;
+    color: black;
+    font-weight: bolder;
 }
 .team {
     color: white;
